--- a/.github/workflows/first_workflow.yaml
+++ b/.github/workflows/first_workflow.yaml
@@ -2,6 +2,8 @@ name: Let's go
 on:
     push:
         branches: [main]
+    pull_request:
+        branches: [main]
 jobs:
     first_test:
         runs-on: ubunut-latest
