--- a/.github/workflows/first_workflow.yaml
+++ b/.github/workflows/first_workflow.yaml
@@ -8,8 +8,8 @@ on:
         paths-ignore: ['docs/**']
     pull_request:
         branches: [main]
-    schedule:
-        - cron: '0 2 * * *'         ##### Cronjob
+    # schedule:
+    #     - cron: '0 2 * * *'         ##### Cronjob
     # workflow_dispatch:              ####### to manually trigger from Gitlab UI
 jobs:
     first_test:
@@ -34,3 +34,10 @@ jobs:
 
             - name: Run tests
               run: pytest --maxfail=1 --disable-warnings -q
+
+    second_test:
+        runs-on: ubuntu-latest
+        needs: first_test
+        steps:
+            - name: checkout code
+              uses: actions/checkout@v3
