--- a/.github/workflows/first_workflow.yaml
+++ b/.github/workflows/first_workflow.yaml
@@ -20,9 +20,10 @@ jobs:
               uses: actions/checkout@v4
 
             - name: install python
-              uses: actions/setup-python@v4
+              uses: ./.github/actions/setup-python-env
               with:
                 python-version: '3.10'
+                requirements-path: 'requirements.txt'
 
             - name: Get dependencies
               run: |
